# members-server-app

./: .env.dev  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy_version.yml  lint.yml  tests.yml
app/: exception_handler.py  main.py  settings.py
app/database/: __init__.py  base_table_model.py  connection.py  feature.py  member.py  member_adn.py  member_children.py  member_dew.py  member_family_data.py  member_general_data.py  member_gift_ability.py  member_references.py  preaching_point.py  reports.py  role.py  role_feature.py  user.py
app/middlewares/: __init__.py  user_aware.py
app/models/: EnumType.py  __init__.py  base_table_model.py  enum_serializer.py  enum_type.py  feature.py  health.py  member.py  member_adn.py  member_dew.py  member_family_data.py  member_general_data.py  member_references.py  preaching_point.py  reports.py  role.py  user.py
app/routers/: __init__.py  enum_type.py  health.py  login.py  member.py  member_adn.py  member_dew.py  member_family_data.py  member_general_data.py  member_reference.py  member_references.py  preaching_point.py  reports.py  role.py  user.py
app/services/: __init__.py  auth.py  enum_type.py  exception.py  health.py  member.py  member_adn.py  member_dew.py  role.py  (+7 more)
db_scripts/: 000_types.sql  001_users.sql  002_roles.sql  003_members.sql  003_users_roles.sql  004_members_family_data.sql  005_members_dew.sql  999_tests_inserts.sql
postgres/: Dockerfile
tests/: conftest.py  utils.py
(+39 files in other folders)
