[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "members-server-app"

[tool.ruff]
line-length = 120
select = ["E", "F", "B"]
exclude = ["migrations", "__pycache__", "__init__.py"]
ignore = ["B008", "F811"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
